Updates for HBase - adding HA, SSL, removing optimizations required from harvest HBase backend